[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudguard-env"
version = "1.0.0"
description = "Cloud FinOps & Governance OpenEnv Environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic",
    "openai",
    "fastapi",
    "uvicorn"
]